Updated User functions and routes, api docs
