# controllers/inventory.js
@@ -25,16 +25,16 @@ const getSingle = async (req, res) => {
             return res.status(400).json({ error: 'Invalid ID format: please check that ID is valid' });
         }
 
-        const record = await Inventory.findById(inventoryId);
+        const inventory = await Inventory.findById(inventoryId);
 
-        if (!record) {
-            return res.status(404).json({ error: 'Record not found' });
+        if (!inventory) {
+            return res.status(404).json({ error: 'Inventory not found' });
         }
 
-        res.status(200).json(record);
+        res.status(200).json(inventory);
     } catch (error) {
-        console.error('Error fetching Record:', error);
-        res.status(500).json({ error: 'An error occurred while fetching the Record' });
+        console.error('Error fetching Inventory:', error);
+        res.status(500).json({ error: 'An error occurred while fetching the Inventory' });
     }
 };
 
