# routes/user.js
@@ -1,0 +1,17 @@
+const router = require('express').Router();
+const userController = require('../controllers/user');
+const { isAuthenticated } = require('../middleware/authenticate');
+
+
+router.get('/', userController.getAll);
+router.get('/:id', userController.getSingle);
+
+
+
+router.post('/', isAuthenticated, userController.createUser);
+router.put('/password/:id', isAuthenticated, userController.changePassword);
+router.put('/admin/:id', isAuthenticated, userController.setAdmin);
+router.put('/user/:id', isAuthenticated, userController.setUser);
+router.delete('/:id', isAuthenticated, userController.deleteUser);
+
+module.exports = router;
